src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>BXGO_Standard_Non_Tender_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Information</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
        <values>
            <fullName>Response Preparation</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BXGO_Standard_Tender_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>No Activity</fullName>
        </values>
        <values>
            <fullName>No Participation</fullName>
        </values>
        <values>
            <fullName>Pre-Tender Execution</fullName>
        </values>
        <values>
            <fullName>Pre-Tender Planning</fullName>
        </values>
        <values>
            <fullName>Pre-Tender Targeting</fullName>
        </values>
        <values>
            <fullName>Response Preparation</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Generic for UAT</fullName>
        <description>generic sales cycle created to test lookup associated critical metric campaign from opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BST_Associated_Critical_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Critical Metrics</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Lag Metrics</value>
            </filterItems>
            <filterItems>
                <field>$Source.BST_Country__c</field>
                <operation>equals</operation>
                <valueField>Campaign.BST_Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_BOOST_Opportunity_ID__c</fullName>
        <displayFormat>O-{00000}</displayFormat>
        <label>BOOST Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BST_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Opportunity_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity $ 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity $ 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Date_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Date_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Opportunity P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Text_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Text_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Text_3__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Opportunity Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXBE_Competition_Red_Flags__c</fullName>
        <label>Competition Red Flags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXBE_Competition_Strengths__c</fullName>
        <label>Competition Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXBE_Competitor_Amount__c</fullName>
        <formula>Amount - BXGO_Amount_in_current_Forecast__c + BXBE_Price_impact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the current Competitor Amount (based on Amount, Amount in current Forecast and Price Impact)</inlineHelpText>
        <label>Competitor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXBE_Manager_Notes__c</fullName>
        <label>Manager Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXBE_Next_Due_Date__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXBE_Notes_Information_relating_to_Stage__c</fullName>
        <inlineHelpText>Option to enter any additional information relating to the stage of the opportunity, if required</inlineHelpText>
        <label>Notes / Information relating to Stage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BXBE_Parent_Account_Name__c</fullName>
        <formula>Account.Parent.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXBE_Price_impact__c</fullName>
        <label>Price impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXBE_Prior_Stage__c</fullName>
        <inlineHelpText>The stage of the opportunity prior to being changed to the current one</inlineHelpText>
        <label>Prior Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXBE_Road_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Road Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXBE_SMART_Objectives__c</fullName>
        <label>SMART Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXBE_Win_Probability__c</fullName>
        <inlineHelpText>Probability for Baxter to win the Opportunity.</inlineHelpText>
        <label>Win Probability (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_Account_Text__c</fullName>
        <formula>Account.BST_Account_Text_1__c &amp; BR() &amp; Account.BST_Account_Text_2__c &amp; BR() &amp; Account.BST_Account_Text_3__c &amp; BR() &amp; Account.BST_Account_Text_4__c</formula>
        <label>Account Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXCA_Fast_Track_to_Gain_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track to Gain Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXCA_Flagged_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Comments__c</fullName>
        <label>Gain/Loss Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Marketing_Manager_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Manager Involved</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Marketing_Manager_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Products_without_GL_information__c</fullName>
        <label>Products without Gain/Loss information</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.BXCA_GL_Type__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Ship_to_Number__c</fullName>
        <label>Ship to Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Status__c</fullName>
        <label>Gain/Loss Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_GL_Submitted__c</fullName>
        <label>Gain/Loss Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_Marketing_Manager_Approved__c</fullName>
        <inlineHelpText>Date by which the Marketing Manager approved the Gain/Loss submission.</inlineHelpText>
        <label>Marketing Manager Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_Opportunity_Qualified__c</fullName>
        <label>Opportunity Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_PD_DGA_Privacy_Signed__c</fullName>
        <label>PD: DGA/Privacy Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_PD_Execution_Stage__c</fullName>
        <label>PD: Execution Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Half POA Execution</fullName>
                </value>
                <value>
                    <fullName>Back Half POA Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_PD_Mid_Year_POA_Check_in__c</fullName>
        <label>PD: Mid Year POA Check-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_PD_New_Net_Patients__c</fullName>
        <label>PD: New Net Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXCA_PD_Privacy_Officer_contacted__c</fullName>
        <label>PD: Privacy Officer contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BXGO_Franchise__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESS</fullName>
                </value>
                <value>
                    <fullName>ADVANCED PATCHES</fullName>
                </value>
                <value>
                    <fullName>ANESTHESIA DRUGS</fullName>
                </value>
                <value>
                    <fullName>APD</fullName>
                </value>
                <value>
                    <fullName>BLOODLINES &amp; ACC.</fullName>
                </value>
                <value>
                    <fullName>BPT COMPOUNDING</fullName>
                </value>
                <value>
                    <fullName>BREVIBLOC</fullName>
                </value>
                <value>
                    <fullName>CAPD</fullName>
                </value>
                <value>
                    <fullName>CAPD/APD SOLUTION</fullName>
                </value>
                <value>
                    <fullName>CLINIC SERVICES</fullName>
                </value>
                <value>
                    <fullName>COMPOUNDING</fullName>
                </value>
                <value>
                    <fullName>DIALYSIS</fullName>
                </value>
                <value>
                    <fullName>ELASTOMERICS</fullName>
                </value>
                <value>
                    <fullName>FIBRIN SEALANT</fullName>
                </value>
                <value>
                    <fullName>FLOWABLE</fullName>
                </value>
                <value>
                    <fullName>GLOBAL SERVICE ACUTE RENAL</fullName>
                </value>
                <value>
                    <fullName>GLOBAL SERVICE CHRONIC REN</fullName>
                </value>
                <value>
                    <fullName>Global Service HEMO</fullName>
                </value>
                <value>
                    <fullName>GPI DIFFERENTIATED PHARMAC</fullName>
                </value>
                <value>
                    <fullName>GPI VIALS &amp; AMPS</fullName>
                </value>
                <value>
                    <fullName>HD CONCENTRATE / SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>HD THERAPIES</fullName>
                </value>
                <value>
                    <fullName>HEMO ANCILLARIES</fullName>
                </value>
                <value>
                    <fullName>HEMO DIALYZERS</fullName>
                </value>
                <value>
                    <fullName>HEMO HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HEMO OTHER</fullName>
                </value>
                <value>
                    <fullName>HEMO SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>HOME HD</fullName>
                </value>
                <value>
                    <fullName>IN CENTER HD</fullName>
                </value>
                <value>
                    <fullName>IRRIGATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_Presented_to_Customer__c</fullName>
        <label>Presented to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BXCA_Portfolio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESS - ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>ACUTE CATHETERS</fullName>
                </value>
                <value>
                    <fullName>AMIA</fullName>
                </value>
                <value>
                    <fullName>AMINO ACIDS</fullName>
                </value>
                <value>
                    <fullName>AN69</fullName>
                </value>
                <value>
                    <fullName>APD SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>ARTISS</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED FILLING SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>B2C SVPS</fullName>
                </value>
                <value>
                    <fullName>BASIC SPECIALTY SETS (NO Y</fullName>
                </value>
                <value>
                    <fullName>BICART / SELECTCART</fullName>
                </value>
                <value>
                    <fullName>BLOODLINE ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>BREVIBLOC</fullName>
                </value>
                <value>
                    <fullName>CAPD OTHER</fullName>
                </value>
                <value>
                    <fullName>CAPD SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>CAROBA</fullName>
                </value>
                <value>
                    <fullName>CASSETTES</fullName>
                </value>
                <value>
                    <fullName>CATHETERS ACUTE</fullName>
                </value>
                <value>
                    <fullName>CIVA - Calcium Syringe</fullName>
                </value>
                <value>
                    <fullName>CIVA - Low AC Citrate</fullName>
                </value>
                <value>
                    <fullName>CLASSIC INDUSTRIES</fullName>
                </value>
                <value>
                    <fullName>CLEANCART</fullName>
                </value>
                <value>
                    <fullName>CLEARLINK ADMIN SETS</fullName>
                </value>
                <value>
                    <fullName>CLEARLINK ADMIN SETS NON-D</fullName>
                </value>
                <value>
                    <fullName>CLEARLINK CATHETER ACCESS</fullName>
                </value>
                <value>
                    <fullName>CLEARLINK SPECIALTY SETS</fullName>
                </value>
                <value>
                    <fullName>CLEARLINK SPECIALTY SETS N</fullName>
                </value>
                <value>
                    <fullName>CLINIC SERVICES</fullName>
                </value>
                <value>
                    <fullName>CODAN</fullName>
                </value>
                <value>
                    <fullName>COLLEAGUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_Risk_Status__c</fullName>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_Strategy_Developed__c</fullName>
        <label>Strategy Developed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXDE_Send_bid_to__c</fullName>
        <label>Send bid to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity owner</fullName>
                </value>
                <value>
                    <fullName>Primary Contract Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXFR_Mitigation_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mitigation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXFR_Predecessor_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Successive Opportunities</relationshipLabel>
        <relationshipName>Successive_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXFR_Retex_results_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retex results attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Amount_in_current_Forecast__c</fullName>
        <label>Amount in current Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Associated_LAG_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to associated Baxter Lag metrics defined per franchise/per country</description>
        <inlineHelpText>Field used to associated Baxter Lag metrics defined per franchise/per country</inlineHelpText>
        <label>Associated LAG Metric</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.BXGO_Country__c</field>
                <operation>equals</operation>
                <valueField>Critical_Goals__c.BST_COUNTRY__c</valueField>
            </filterItems>
            <filterItems>
                <field>Critical_Goals__c.BST_ACTIVE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Critical_Goals__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Goal Metrics</value>
            </filterItems>
            <filterItems>
                <field>Critical_Goals__c.BST_RELATED_TO__c</field>
                <operation>equals</operation>
                <value>Opportunities</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Critical_Goals__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_1_Impact__c</fullName>
        <inlineHelpText>Impact of Award Criteria 1 on the awarding decision.</inlineHelpText>
        <label>Award Criteria 1 Impact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_1__c</fullName>
        <inlineHelpText>Criteria which is important for the awarding decision.</inlineHelpText>
        <label>Award Criteria 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BXGO_Opportunity_Award_Criteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_2_Impact__c</fullName>
        <inlineHelpText>Impact of Award Criteria 2 on the awarding decision.</inlineHelpText>
        <label>Award Criteria 2 Impact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_2__c</fullName>
        <inlineHelpText>Criteria which is important for the awarding decision.</inlineHelpText>
        <label>Award Criteria 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BXGO_Opportunity_Award_Criteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_3_Impact__c</fullName>
        <inlineHelpText>Impact of Award Criteria 3 on the awarding decision.</inlineHelpText>
        <label>Award Criteria 3 Impact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_Award_Criteria_3__c</fullName>
        <inlineHelpText>Criteria which is important for the awarding decision.</inlineHelpText>
        <label>Award Criteria 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BXGO_Opportunity_Award_Criteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Award_Split__c</fullName>
        <inlineHelpText>Split of customer procurement between Baxter and Competitors.</inlineHelpText>
        <label>Award Split</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>80%-20%</fullName>
                </value>
                <value>
                    <fullName>60%-40%</fullName>
                </value>
                <value>
                    <fullName>50%-50%</fullName>
                </value>
                <value>
                    <fullName>50%-30%-20%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Baxter_Opportunity_Number__c</fullName>
        <displayFormat>BXON{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Baxter Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BXGO_Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sealed Traditional Bid</fullName>
                </value>
                <value>
                    <fullName>Online Single Bid</fullName>
                </value>
                <value>
                    <fullName>Online Multiple Bid</fullName>
                </value>
                <value>
                    <fullName>Reverse Auction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Contract_Signed__c</fullName>
        <label>Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Contract_Valid_from__c</fullName>
        <label>Contract Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Contract_Valid_to__c</fullName>
        <label>Contract Valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Direct__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is the business handled direct or via a distributor?</inlineHelpText>
        <label>Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Franchise_MGP_Gap_weighted__c</fullName>
        <label>Franchise MGP Gap weighted</label>
        <summarizedField>OpportunityLineItem.BXGO_Franchise_MGP_weighted__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BXGO_Franchise__c</fullName>
        <inlineHelpText>In case not enough details are known to specify products, please select the main product category and enter estimated amount.</inlineHelpText>
        <label>Main Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CVG6</fullName>
                    <label>Non-Baxter Edwards Lifesciences</label>
                </value>
                <value>
                    <fullName>HOP6</fullName>
                    <label>Hospital Global Support</label>
                </value>
                <value>
                    <fullName>X6A1</fullName>
                    <label>HC - IV Therapies</label>
                </value>
                <value>
                    <fullName>X6A3</fullName>
                    <label>HC - Nutrition</label>
                </value>
                <value>
                    <fullName>X6AA</fullName>
                    <label>HC - Anesthesia</label>
                </value>
                <value>
                    <fullName>X6AB</fullName>
                    <label>HC - Glob.Pharma Injectables</label>
                </value>
                <value>
                    <fullName>X6AC</fullName>
                    <label>HC - Pharmacy Services</label>
                </value>
                <value>
                    <fullName>X6AD</fullName>
                    <label>HC - Infusion Systems</label>
                </value>
                <value>
                    <fullName>X6AG</fullName>
                    <label>RE - Acute</label>
                </value>
                <value>
                    <fullName>X6B6</fullName>
                    <label>HC - Other Hospital Products</label>
                </value>
                <value>
                    <fullName>X6CB</fullName>
                    <label>HC - Compounding</label>
                </value>
                <value>
                    <fullName>X6CG</fullName>
                    <label>RE - Chronic</label>
                </value>
                <value>
                    <fullName>X6D1</fullName>
                    <label>RE - Hemo Dialysis</label>
                </value>
                <value>
                    <fullName>X6D2</fullName>
                    <label>RE - Peritoneal Dialysis</label>
                </value>
                <value>
                    <fullName>X6D8</fullName>
                    <label>RE - Other Renal</label>
                </value>
                <value>
                    <fullName>X6E4</fullName>
                    <label>HC - BioSurgery</label>
                </value>
                <value>
                    <fullName>X6HA</fullName>
                    <label>HC - Indirect Supplies</label>
                </value>
                <value>
                    <fullName>X6HC</fullName>
                    <label>HC - Non-Operating Group</label>
                </value>
                <value>
                    <fullName>X6SH</fullName>
                    <label>HC - Service</label>
                </value>
                <value>
                    <fullName>X6SR</fullName>
                    <label>RE - Service</label>
                </value>
                <value>
                    <fullName>X6SV</fullName>
                    <label>RE - Small Volume Parenterals</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Franchise_secondary__c</fullName>
        <label>Secondary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BXGO_Franchise</valueSetName>
        </valueSet>
    </fields>
</CustomObject>